# windmolen

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: run_unit_tests.yml
tests/: test_api.py
windmolen/: __init__.py  api.py
