[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [
  {name = "Austin Raney", email = "aaraney@protonmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
dependencies = ["typing_extensions"]
description = "Treat multiple async iterators as a single async iterator."
dynamic = ["version"]
keywords = ["async", "iterator"]
license = {text = "MIT License"}
name = "windmolen"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio",
]
dev = ["black"]

[tool.setuptools]
packages = ["windmolen"]

[tool.setuptools.dynamic]
version = {attr = "windmolen.__version__"}
